# ros2webots

./: .gitignore  README.md
ROS2WebotsLauncher/: package.xml  setup.cfg  setup.py
baglog/: rosbot_data_20240125_225927.bag
baglog/rosbot_data_20240125_225927/: metadata.yaml  rosbot_data_20240125_225927.bag_0.mcap
baglog/rosbot_data_20240126_200714.bag/: metadata.yaml  rosbot_data_20240126_200714.bag_0.mcap
baglog/rosbot_data_20240126_201503.bag/: metadata.yaml  rosbot_data_20240126_201503.bag_0.mcap
baglog/rosbot_data_20240126_202226.bag/: metadata.yaml  rosbot_data_20240126_202226.bag_0.mcap
baglog/rosbot_data_20240126_203002.bag/: metadata.yaml  rosbot_data_20240126_203002.bag_0.mcap
baglog/rosbot_data_20240126_211040.bag/: metadata.yaml  rosbot_data_20240126_211040.bag_0.mcap
baglog/rosbot_data_20240126_211446.bag/: metadata.yaml
baglog/rosbot_data_20240126_212440.bag/: metadata.yaml  rosbot_data_20240126_212440.bag_0.mcap
baglog/rosbot_data_20240126_212959.bag/: metadata.yaml  rosbot_data_20240126_212959.bag_0.mcap
baglog/rosbot_data_20240126_213745.bag/: metadata.yaml  rosbot_data_20240126_213745.bag_0.mcap
baglog/rosbot_data_20240126_214159.bag/: metadata.yaml  rosbot_data_20240126_214159.bag_0.mcap
baglog/rosbot_data_20240203_085340/: metadata.yaml  rosbot_data_20240203_085340_0.mcap
baglog/rosbot_data_20240203_184148/: metadata.yaml  rosbot_data_20240203_184148_0.mcap
baglog/rosbot_data_20240203_185121/: metadata.yaml  rosbot_data_20240203_185121_0.mcap
baglog/rosbot_data_20240203_192038/: metadata.yaml  rosbot_data_20240203_192038_0.mcap
baglog/rosbot_data_20240203_192801/: metadata.yaml  rosbot_data_20240203_192801_0.mcap
baglog/rosbot_data_20240203_193328/: metadata.yaml  rosbot_data_20240203_193328_0.mcap
baglog/rosbot_data_20240203_193601/: metadata.yaml  rosbot_data_20240203_193601_0.mcap
baglog/rosbot_data_20240203_210100/: metadata.yaml  rosbot_data_20240203_210100_0.mcap
baglog/rosbot_data_20240203_221323/: metadata.yaml  rosbot_data_20240203_221323_0.mcap
baglog/rosbot_data_20240203_222719/: metadata.yaml  rosbot_data_20240203_222719_0.mcap
baglog/rosbot_data_20240203_230916/: metadata.yaml  rosbot_data_20240203_230916_0.mcap
baglog/rosbot_data_20240203_231418/: metadata.yaml
baglog/rosbot_data_20240203_235414/: metadata.yaml  rosbot_data_20240203_235414_0.mcap
baglog/rosbot_data_20240204_000723/: metadata.yaml  rosbot_data_20240204_000723_0.mcap
baglog/rosbot_data_20240204_001738/: metadata.yaml
baglog/rosbot_data_20240204_082417/: metadata.yaml  rosbot_data_20240204_082417_0.mcap
baglog/rosbot_data_20240204_083533/: metadata.yaml
ros2webots_manipulator/: CMakeLists.txt  package.xml
ros2webots_manipulator/launch/: ned_world_launch.py
ros2webots_manipulator/resource/: Ned.urdf  nedComponent.urdf  notes.txt
ros2webots_manipulator/ros2webots_manipulator/: ned_robot_driver.py
ros2webots_manipulator/src/: ned_node_moveit2.cpp
ros2webots_manipulator/worlds/: .world_roboticknowledge.wbproj  world_roboticknowledge.wbt
ros2webots_ned_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
ros2webots_ned_moveit2/config/: Ned.ros2_control.xacro  Ned.srdf  Ned.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ros2webots_ned_moveit2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2webots_rosbot/: CMakeLists.txt  package.xml
ros2webots_rosbot/cpp_models/: laser_env_mapper.cpp  laser_env_mapper.hpp
ros2webots_rosbot/data_scripts/: bag_data_extractor.py  bag_data_extractor_bagpy.ipynb  baglog_process.m
ros2webots_rosbot/launch/: rosbot_control_launch.py  rosbot_world_launch.py
ros2webots_rosbot/protos/: Rosbot.proto
ros2webots_rosbot/resource/: TurtleBot3Burger.urdf  frames_2024-01-19_18.13.03.gv  rosBotComponent.urdf  rosbot.urdf  rosbot_robot_localization.yaml  turtleBotComponent.urdf
ros2webots_rosbot/ros2webots_rosbot/: rosbot_robot_driver.py
ros2webots_rosbot/simulink_models/: ros2webots_go_to_point_controller_model_cg.sldd  ros2webots_go_to_point_controller_model_cg.slx  ros2webots_localization_model.sldd  ros2webots_localization_model.slx  ros2webots_localization_model_cg.slx
ros2webots_rosbot/simulink_models/ros2webots_go_to_point_controller_model_cg_ert_rtw/: ros2webots_go_to_point_controller_model_cg.cpp  ros2webots_go_to_point_controller_model_cg.h  ros2webots_go_to_point_controller_model_cg_private.h  ros2webots_go_to_point_controller_model_cg_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
ros2webots_rosbot/simulink_models/ros2webots_localization_model_cg_ert_rtw/: ros2webots_localization_model_cg.cpp  ros2webots_localization_model_cg.h  ros2webots_localization_model_cg_private.h  ros2webots_localization_model_cg_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
ros2webots_rosbot/src/: rosbot_cpp_node_test.cpp  rosbot_env_mapper_node.cpp  rosbot_get_keyboard_command.cpp  rosbot_localization_node.cpp  rosbot_tf_publisher.cpp  rosbot_way_point_tracker_node.cpp
ros2webots_rosbot/worlds/: .world_roboticknowledge.wbproj  .world_roboticknowledge_advanced_drone.wbproj  world_roboticknowledge.wbt  world_roboticknowledge_advanced_drone.wbt
ros2webots_turtlebot/: package.xml  setup.cfg  setup.py
ros2webots_turtlebot/launch/: test_launch.py  turtlebot_world_launch.py
ros2webots_turtlebot/protos/: TurtleBot3Burger.proto
ros2webots_turtlebot/resource/: turtleBotComponent.urdf
ros2webots_turtlebot/ros2webots_turtlebot/: turtlebot_robot_driver.py
ros2webots_turtlebot/worlds/: .world_roboticknowledge.wbproj  world_roboticknowledge.wbt
webots_ros2_dev_1/: CMakeLists.txt  package.xml
webots_ros2_dev_1/src/: sim_node_ros2webots.cpp
webots_ros2_dev_2/: package.xml  setup.cfg  setup.py
(+28 files in other folders)
